--- a/school/templates/auth/studentregister.html
+++ b/school/templates/auth/studentregister.html
@@ -1,7 +1,44 @@
 {% load static %}
 {% load django_bootstrap5 %}
-<form action=""  method="POST">
+<!-- <form action=""  method="POST">
     {% csrf_token %}
     {{form}}
     <input type="submit" value="Register" class="btn btn-block btn-primary">
-</form>
+</form> -->
+
+
+
+
+{% block content %}
+
+  <h2>Student  Form</h2>
+
+  <form method="post" id="studentForm" data-subjects-url="{% url 'ajax_load_subjects' %}">
+    {% csrf_token %}
+    <table>
+      {{ form.as_table }}
+    </table>
+    <input type="submit" value="Register" class="btn btn-block btn-primary">
+    
+  </form>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script>
+    $("#id_classes").change(function () {
+      var url = $("#studentForm").attr("data-subjets-url");  // get the url of the `load_cities` view
+      var classesId = $(this).val();  // get the selected country ID from the HTML input
+
+      $.ajax({                       // initialize an AJAX request
+        url:url ,    // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+        data: {
+          'classes_id': classesId       // add the country id to the GET parameters
+        },
+        success: function (data) {   // `data` is the return of the `load_cities` view function
+          $("#id_subjects").html(data);  // replace the contents of the city input with the data that came from the server
+        }
+      });
+
+    });
+  </script>
+
+{% endblock %}
