--- a/school/templates/results.html
+++ b/school/templates/results.html
@@ -5,4 +5,8 @@
     <h5> students: {{subject.students.all}}</h5>
     
 {%endfor%}
+{{subjects}}
+
+{{form}}
+<button class="btn btn-sm btn-outline-success" type="button"><a style="color: white;" class="dropdown-item" href="{% url 'addresults'%}">Subjects</a></button>
 
