--- a/school/templates/auth/register.html
+++ b/school/templates/auth/register.html
@@ -1,5 +1,5 @@
-{% load static %}
-{% load django_bootstrap5 %}
+{%extends 'auth/base.html'%}
+{%block content%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,3 +39,4 @@
 
 </body>
 </html>
+{%endblock%}
