dependent dropdown added

--- a/school/templates/auth/authbase.html
+++ b/school/templates/auth/authbase.html
@@ -40,6 +40,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
   {% endblock %}
 
 </head>
@@ -101,6 +102,7 @@
         <script src="~/adminlte/dist/js/pages/dashboard.js"></script>       
         <script src="~/adminlte/dist/js/pages/dashboard2.js"></script>
         <script src="~/adminlte/dist/js/demo.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
      {% bootstrap_javascript %}
     {% endblock %}
 </body>
