--- a/school/templates/auth/studentregister.html
+++ b/school/templates/auth/studentregister.html
@@ -7,7 +7,7 @@
     <input type="submit" value="Register" class="btn btn-block btn-primary">
 </form> -->
   {%block content%}
-<center>
+<div align="left">
   <h2>Student  Form</h2>
 
   <form method="post" id="studentForm" data-subjects-url="{% url 'ajax_load_subjects' %}">
@@ -18,11 +18,11 @@
     <input type="submit" value="Register" class="btn btn-block btn-primary">
     
   </form>
-</center>
+</div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script>
     $("#id_classes").change(function () {
-      var url = $("#studentForm").attr("data-subjets-url");  // get the url of the `load_cities` view
+      var url = $("#studentForm").attr("data-subjects-url");  // get the url of the `load_cities` view
       var classesId = $(this).val();  // get the selected country ID from the HTML input
 
       $.ajax({                       // initialize an AJAX request
