--- a/school/templates/auth/authbase.html
+++ b/school/templates/auth/authbase.html
@@ -48,39 +48,15 @@
   
   
       <!-- Main Sidebar Container -->
-      {% include "sidebar.html" %}
+      {% include "hod/sidebar.html" %}
       {% block content %} 
       {%endblock%}
 
   
-      <!-- Content Wrapper. Contains page content -->
-      <div class="content-wrapper">
-  
-      <!-- Content Header (Page header) -->
-        <div class="content-header">
-          <div class="container-fluid">
-            <div class="row mb-2">
-              <div class="col-sm-6">
-                <h1 class="m-0 text-dark">
-                  {% block page_title %}
-                  {% endblock page_title %}
-                </h1>
-              </div><!-- /.col -->
-            </div><!-- /.row -->
-          </div><!-- /.container-fluid -->
-        </div>
-        <!-- /.content-header -->
-  
-        <!-- Main content -->
-        {% block main_content %}
-        {% endblock main_content %}
-        <!-- /.content -->
-      </div>
-      <!-- /.content-wrapper -->
+      
       {% include 'footer.html' %}
   
       
-    </div>
 
 
 
