--- a/school/templates/hod/base.html
+++ b/school/templates/hod/base.html
@@ -83,7 +83,7 @@
       <!-- /.navbar -->
   
       <!-- Main Sidebar Container -->
-      {% include "navbar.html" %}
+      {% include "hod/sidebar.html" %}
   
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper">
