--- a/school/templates/auth/register.html
+++ b/school/templates/auth/register.html
@@ -1,5 +1,7 @@
+{% extends 'auth/authbase.html'%}
 {% load static %}
 {% load django_bootstrap5 %}
+
 <form action=""  method="POST">
     {% csrf_token %}
     {{form}}
