--- a/school/templates/hod/base.html
+++ b/school/templates/hod/base.html
@@ -83,8 +83,8 @@
       <!-- /.navbar -->
   
       <!-- Main Sidebar Container -->
-      {% include "hod/sidebar.html" %}
-  
+      <!-- {% include "hod/sidebar.html" %}
+   -->
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper">
   
