--- a/school/templates/auth/authbase.html
+++ b/school/templates/auth/authbase.html
@@ -1,6 +1,8 @@
 {% load bootstrap3 %}
 {% load bootstrap5 %}
 {% load static%}
+{% load crispy_forms_tags %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -50,7 +52,7 @@
   
   
       <!-- Main Sidebar Container -->
-      {% include "hod/sidebar.html" %}
+      <!-- {% include "hod/sidebar.html" %} -->
       
       {% block content %} 
       {%endblock%}
