--- a/school/templates/teacher/studentlist.html
+++ b/school/templates/teacher/studentlist.html
@@ -7,7 +7,7 @@
 <div class="container">
 
   <div class="card">
-        <table class="table">
+        <table class="table table-striped">
             <thead>
                 <tr>
                   <th scope="col">#</th>
