--- a/school/templates/loadsubjects.html
+++ b/school/templates/loadsubjects.html
@@ -1,7 +1,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 <select name="subjects" id="subjects" multiple>
-<option value="">---------</option>
+<option value="">*********</option>
 {% for subject in subjects %}
 <option  value="{{ subject.pk }}">{{ subject }}</option>
 {% endfor %}
