--- a/school/templates/auth/studentregistration.html
+++ b/school/templates/auth/studentregistration.html
@@ -45,7 +45,7 @@
                           </div>
   
                           <button type="submit" class="btn btn-primary btn-user btn-block"> Register
-                              Teacher</button>
+                              Student</button>
   
                       </form>
                       <br>
