--- a/school/templates/auth/teacherprofile.html
+++ b/school/templates/auth/teacherprofile.html
@@ -16,49 +16,19 @@
                 </legend>
                 <hr>
                 <div class="register-form">
-                    <form class="user" action="" method="POST">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            {{ form.username|crispy }}
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-sm-4 mb-3 mb-sm-0">
-                                {{ u_form.first_name|crispy }}
-                            </div>
-                            <div class="col-sm-4">
-                                {{ u_form.middle_name|crispy  }}
-                            </div>
-                            <div class="col-sm-4">
-                                {{ u_form.last_name|crispy }}
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-sm-6 mb-3 mb-sm-0">
-                                {{ p_form.staff_number|crispy  }}
-                            </div>
-                            <div class="col-sm-6">
-                                {{ p_form.profile_photo|crispy  }}
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-sm-6 mb-3 mb-sm-0">
-                                {{ u_form.password1|crispy }}
-                            </div>
-                            <div class="col-sm-6">
-                                {{ u_form.password2 |crispy }}
-                            </div>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary btn-user btn-block"> Update
-                            </button>
-
-                    </form>
+                        <form class="user" action="" method="POST" id="studentForm" data-subjects-url="{% url 'ajax_load_subjects' %}">
+                            {% csrf_token %}
+                           {% bootstrap_form u_form %}
+                           {% bootstrap_form  p_form %}
+                            <button type="submit" class="btn btn-primary btn-user btn-block"> Update
+                                Teacher</button>
+    
+                        </form>
+                       
+                    
                     <br>
 
-                    <div class="text-center">
-                        <small class="text-muted" style="color: white;">Already have an account?</small> <a
-                            class="small" href="{% url 'login' %}"> Login!</a>
-                    </div>
+                
                 </div>
 
             </div>
