--- a/school/templates/student/studentprofile.html
+++ b/school/templates/student/studentprofile.html
@@ -1,4 +1,4 @@
-{% extends 'auth/authbase.html' %}
+{% extends 'student/studentbase.html' %}
 {% load static %}
 {% load bootstrap5 %}
 {% load crispy_forms_tags %}
