--- a/school/templates/footer.html
+++ b/school/templates/footer.html
@@ -1,4 +1,4 @@
 <footer class="main-footer bg-dark " style="text-align: center;">
-    <strong class="text-white" >Copyright &copy; {% now "Y" %} <a href="http://adminlte.io">Vota Secondary School</a>.</strong>  
+    <strong class="text-white" >Copyright &copy; {% now "Y" %} <a href="/">Vota Secondary School</a>.</strong>  
   
 </footer>
