--- a/school/templates/student/studentbase.html
+++ b/school/templates/student/studentbase.html
@@ -110,7 +110,7 @@
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         
                         <li class="nav-item">
-                            {% url 'home' as home %}
+                            {% url 'studhome' as home %}
                             <a href="{{home}}" class="nav-link {% if home == request.path %} active {% endif %}">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
