--- a/school/templates/student/studentbase.html
+++ b/school/templates/student/studentbase.html
@@ -170,6 +170,8 @@
         <script src="~/adminlte/dist/js/pages/dashboard.js"></script>       
         <script src="~/adminlte/dist/js/pages/dashboard2.js"></script>
         <script src="~/adminlte/dist/js/demo.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
      {% bootstrap_javascript %}
     {% endblock %}
 </body>
