--- a/school/templates/classes.html
+++ b/school/templates/classes.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!-- {% load static %}
 {% load bootstrap5 %}
 
 {% for class in all_classes%}
@@ -7,4 +7,4 @@
 
 {% endfor%}
 
-{{subject}}
+{{subject}} -->
