--- a/school/templates/student/info.html
+++ b/school/templates/student/info.html
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="col-md-6">
   <div style="width: 30rem;">
-    <img src="{{ current_student.profile_photo.url }}" class="card-img-top" alt="" style="height: 150px; width: 250px;">
+    <img src="{{ current_student.profile_photo.url }}" class="card-img-top" alt="image" style="height: 150px; width: 250px;">
     <div class="card-body">
     
       <b class="card-text">Name: {{current_student}}</b> <br>
@@ -29,20 +29,13 @@
       <h4 class="card-text">Average Points: {{all_points |floatformat }}</h4> 
       <h4 class="card-text">Average Grade: {% ov_grade all_points %} </h4>
       <h4>Mean Marks: {% mean_marks current_student  classes%}%</h4>
+      <h3>Position: {{current_student.position}}/{{studentNum}}</h3>
     </div>
   </div>
 </div>
 
 </div>
 
-<<<<<<< HEAD
-<h4>Total Marks: {{all_marks}} </h4>
-<h4>Average Points: {{all_points |floatformat }} </h4>
-<h4>Average Grade: {% ov_grade all_points %}</h4>
-<h4>Mean Marks: {% mean_marks current_student  classes%}%</h4>
-
-=======
->>>>>>> 4f8b23f467f0c6aad11893208009e7c4e87b9f40
 <br>
 {% for subject in subjects %}
     {{subject.name}}
