--- a/school/templates/hod/base.html
+++ b/school/templates/hod/base.html
@@ -125,6 +125,7 @@
                             </p>
                         </a>
                     </li>
+                    
                       <li class="nav-item">
                           {% url 'registerstudent' as registerstudent %}
                           <a href="{{registerstudent}}" class="nav-link {% if registerstudent == request.path %} active {% endif %}">
@@ -135,6 +136,16 @@
                               </p>
                           </a>
                       </li>
+                      <li class="nav-item">
+                        {% url 'addsubject' as addsubject %}
+                        <a href="{{addsubject}}" class="nav-link {% if addsubject == request.path %} active {% endif %}">
+                            <i class="nav-icon fas fa-th"></i>
+                            <p>
+                                Add Subject
+    
+                            </p>
+                        </a>
+                    </li>
                       <li class="nav-item">
                         {% url 'logout' as logout %}
                         <a href="{{logout}}" class="nav-link {% if logout == request.path %} active {% endif %}">
