--- a/school/templates/student/report.html
+++ b/school/templates/student/report.html
@@ -1,8 +1,6 @@
-{%extends 'student/studentbase.html'%}
 {% load static %}
 {% load mymarks %}
-
-{% block content %}
+<div id="print-content">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <div class="container">
@@ -23,39 +21,24 @@
 <div class="col-md-6">
   <div  style="width: 30rem;">
     <div class="card-body">
-    
+    <div class="card-columns">
       <h4 class="card-text">Total Marks: {{all_marks}} </h4>
       <h4 class="card-text">Average Points: {{all_points |floatformat }}</h4> 
       <h4 class="card-text">Average Grade: {% ov_grade all_points %} </h4>
       <h4>Mean Marks: {% mean_marks current_student  classes%}%</h4>
       <h3>Position: {{current_student.position}}/{{studentNum}}</h3>
     </div>
+    </div>
   </div>
 </div>
 
 </div>
 
-<br>
-{% for subject in subjects %}
-    {{subject.name}}
-{% endfor %}
 
-<br>
-<form class="navbar-form navbar-right-align" action="{% url 'studentinfo'%}" >
-  
-  <select name = "selclasses"class="form-control form-control-lg">
-    
-    <option selected>Select class </option>
-      {% for classes in p_classes %}
-      <option value = "{{classes.id}}">{{classes.name}}</option>
 
-      {% endfor %}
-  </select>
-  <input type="submit" value="Search" class="btn btn-default">
-</form> 
 <div class="card">
     <table class="table">
-      <thead ><tr> <h6 style="text-align:center;"><b>{{selectedClass.name}} results</b> </h6> </tr></thead>
+      <thead ><tr> <h6 style="text-align:center;"><b>{{current_student.classes}} results</b> </h6> </tr></thead>
         <thead>
           
             <tr>
@@ -94,6 +77,8 @@
                 
           </tbody>
     </table>
+
+    
     <hr>
     <canvas id="myChart" width="100" height="30"></canvas>
     <script>
@@ -133,6 +118,8 @@
         }
     });
     </script>
-  </div>
+    
   
-  {%endblock%}
+  </div>
+ 
+  
