--- a/school/templates/hod/allclasses.html
+++ b/school/templates/hod/allclasses.html
@@ -14,14 +14,11 @@
 
         {{class}}
         <a href="{% url 'getposition' class.id %}" class="btn btn-primary" style="width: 200px; height: 30px;">Genereate Positions</a>
+        <a href="{% url 'allstudents' class.id %}" class="btn btn-primary" style="width: 200px; height: 30px;">All Students</a>
+
         {% all_students class as mystuds %}
         
-        {% for stud in mystuds %}
-            
-            {{stud.user.first_name}} {{stud.user.middle_name}} {{stud.user.last_name}} <br>
-          
-        
-        {%endfor%}
+     
        
         <br>
     </div>
