--- a/school/templates/student/report.html
+++ b/school/templates/student/report.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-md-6">
   <div style="width: 30rem;">
-    <img src="{{ current_student.profile_photo.url }}" class="card-img-top" alt="image" style="height: 150px; width: 250px;">
+    <img src="{{ user.profile_photo.url }}" class="card-img-top" alt="image" style="height: 150px; width: 250px;">
     <div class="card-body">
     
       <b class="card-text">Name: {{current_student}}</b> <br>
