--- a/school/templates/student/info.html
+++ b/school/templates/student/info.html
@@ -85,11 +85,11 @@
                   <td> {{mark.endterm}}  </td>
                   <td>  {{mark.mean_marks}} </td>
                   <td> {{mark.grade}}</td>
-                  <td> {{mark.comments}}</td>
+                  <td><span>{% comments mark.grade%}</span></td>
                   <td> {{mark.teacher}}</td>
                   
                 </tr>
-               
+              
                 {% endfor %}
                 
           </tbody>
