--- a/school/templates/student/report.html
+++ b/school/templates/student/report.html
@@ -117,8 +117,11 @@
         }
     });
     </script>
+
+   
+  </div>
+  <h5>Principal's comment: {{studentreport.p_comments}}</h5>
+  <h5>Teacher's comment: {{studentreport.t_comments}}</h5>
     
   
-  </div>
- 
   
