--- a/school/templates/hod/allstudents.html
+++ b/school/templates/hod/allstudents.html
@@ -7,6 +7,7 @@
 {% for stud in all_students %}
             
 {{stud.user.first_name}} {{stud.user.middle_name}} {{stud.user.last_name}}  <a href="{% url 'editprofile' stud.user.id %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">Edit Profile</a>
+<a href="{% url 'principal_comment' stud.user.id %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">Results</a>
 <a href="{% url 'addfees' stud.user.id %}" class="btn btn-success" tabindex="-1" role="button" aria-disabled="true">Add Fees</a>
 <a href="{% url 'delprofile' stud.user.id %}" class="btn btn-danger" tabindex="-1" role="button" aria-disabled="true">Delete Profile</a>
 <br><br>
@@ -14,7 +15,6 @@
 
 
 {%endfor%}
-
 
 
 
