--- a/school/templates/hod/hod.html
+++ b/school/templates/hod/hod.html
@@ -28,7 +28,7 @@
                 <div class="icon" >
                     <i class="ion ion-stats-bars" ></i>
                 </div>
-                <a href="" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="{% url 'allteachers' %}" class="btn btn-warning">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
         </div>
     </div>  
