--- a/school/templates/student/report.html
+++ b/school/templates/student/report.html
@@ -21,7 +21,7 @@
 <div class="col-md-6">
   <div  style="width: 30rem;">
     <div class="card-body">
-    <div class="card-columns">
+    <div class="card-columns">{{p_report}}
       <h4 class="card-text">Total Marks: {{all_marks}} </h4>
       <h4 class="card-text">Average Points: {{all_points |floatformat }}</h4> 
       <h4 class="card-text">Average Grade: {% ov_grade all_points %} </h4>
