--- a/school/templates/student/info.html
+++ b/school/templates/student/info.html
@@ -28,7 +28,7 @@
       <h4 class="card-text">Average Points: {{all_points |floatformat }}</h4> 
       <h4 class="card-text">Average Grade: {% ov_grade all_points %} </h4>
       <h4>Mean Marks: {% mean_marks current_student  classes%}%</h4>
-      <h3>Position: {{current_student.position}}/{{studentNum}}</h3>
+      <h3>Position: {{c_report.position}}/{{studentNum}}</h3>
     </div>
   </div>
 </div>
