--- a/school/templates/student/report.html
+++ b/school/templates/student/report.html
@@ -64,6 +64,7 @@
               <th scope="col">End Term</th>
               <th scope="col">Mean Marks</th>
               <th scope="col">Mean Grade</th>
+              <th scope="col">Position</th>
               <th scope="col">Comments</th>
               <th scope="col">Teacher</th>
               
@@ -77,13 +78,16 @@
 
                 {% for mark in marks %}
                
-                <td> {{mark.subjects.name}}  </td>
-                  <td> {{mark.exam1}}  </td>
-                  <td> {{mark.exam2 }} </td>
-                  <td> {{mark.endterm}}  </td>
-                  <td>  {{mark.mean_marks}} </td>
-                  <td> {{mark.grade}}</td>
-                  <td> {{mark.teacher}}</td>
+                <td> <span>{{mark.subjects.name}} </span> </td>
+                  <td><span>{{mark.exam1}} </span> </td>
+                  <td> <span>{{mark.exam2 }} </span></td>
+                  <td> <span>{{mark.endterm}}  </span></td>
+                  <td> <span> {{mark.mean_marks}} </span></td>
+                  
+                  <td> <span>{{mark.grade}}</span></td>
+                  <td> <span>{%get_subject_position mark.subjects current_student%}</span> </td>
+                  <td><span>{% subjectcomments mark.grade%}</span></td>
+                  <td> <span>{{mark.teacher}}</span></td>
                   
                 </tr>
                
