--- a/school/templates/teacher/teacher.html
+++ b/school/templates/teacher/teacher.html
@@ -5,13 +5,21 @@
 {% load static%}
 
 {%block content%}
+{% if classteacherof %}
+    {{classteacherof}} <br>
+    {% for student in allstudents %}
 
-{{classteacherof}} <br>
-{% for student in allstudents %}
+    {{student}} {% if student.student_report.all  %} 
+    <a href="{% url 'teacher_comment' student.user.id %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">Results</a> <br>
+    {% else %}
+    <button type="button" class="btn btn-warning">No Results</button>
 
-{{student}} <a href="{% url 'teacher_comment' student.user.id %}" class="btn btn-info" tabindex="-1" role="button" aria-disabled="true">Results</a> <br>
+    {% endif %}
+    {%endfor%}
 
-{%endfor%}
+    {%else%}
+    No class Allocated
+{%endif%}
 
 
 {%endblock%}
