--- a/school/templates/student/report.html
+++ b/school/templates/student/report.html
@@ -13,6 +13,7 @@
       <b class="card-text">Name: {{current_student}}</b> <br>
       <b class="card-text">Class: {{current_student.classes}}</b> <br>
       <b class="card-text">Reg Number: {{current_student.reg_number}}</b> <br>
+      <b class="card-text">KCPE Marks: {{current_student.kcpe_marks}}</b> <br>
       <b class="card-text">House: {{current_student.hse}}</b> <br>
     </div>
     </div>
