--- a/school/templates/home.html
+++ b/school/templates/home.html
@@ -6,9 +6,14 @@
      <h1 class="text-center">VOTA SECONDARY SCHOOL</h1>
    </div>
     <br>
-    <!-- <div class="container">
-        {{information}}
-    </div> -->
+    <div class="container">
+        {% for info in information %}
+            <p>Title : {{info.title}}</p>
+            <p>Description : {{info.desc}}</p>
+            <p>Opening Date : {{info.openingDate}}</p>
+            <p>Opening Date : {{info.closingDate}}</p>
+        {% endfor %}
+    </div>
     <div class="card">
 
         <h4 class="card-title text-center"><b>School Motto:</b> <br>  <img src="https://static.thenounproject.com/png/317886-200.png" alt="image" style="height: 70px; width: 70px;"></h4>
