--- a/school/templates/student/info.html
+++ b/school/templates/student/info.html
@@ -28,8 +28,9 @@
       <h4 class="card-text">Total Marks: {{all_marks}} </h4>
       <h4 class="card-text">Average Points: {{all_points |floatformat }}</h4> 
       <h4 class="card-text">Average Grade: {% ov_grade all_points %} </h4>
-      <h4>Mean Marks: {% mean_marks current_student  classes%}%</h4>
+      <h4>Mean Marks: {% mean_marks current_student  classes%}% </h4>
       <h3>Position: {{c_report.position}}/{{studentNum}}</h3>
+      <h5>KCPE Dev: {{c_report.getDev}}</h5>
     </div>
   </div>
 </div>
