--- a/school/templates/student/report.html
+++ b/school/templates/student/report.html
@@ -29,6 +29,7 @@
         <h4 class="card-text">Average Grade:  {{p_report.ov_grade}}</h4>
         <h4>Mean Marks: {{p_report.s_mean_marks}}%</h4>
         <h3>Position: {{p_report.position}}/{{studentNum}}</h3>
+        <h5>KCPE Dev: {{p_report.getDev}}</h5>
       </div>
       </div>
     </div>
@@ -46,6 +47,7 @@
         <h4 class="card-text">Average Grade: {% ov_grade all_points %} </h4>
         <h4>Mean Marks: {% mean_marks current_student  classes%}%</h4>
         <h3>Position: {{c_report.position}}/{{studentNum}}</h3>
+        <h5>KCPE Dev: {{c_report.getDev}}</h5>
       </div>
       </div>
     </div>
