--- a/school/templates/login.html
+++ b/school/templates/login.html
@@ -8,8 +8,8 @@
 <!-- {% if form.errors %}
 <p> Invalid Username and/or Password </p>
 {% endif %} -->
-<div class="body">
-    <div class="container mt-5">
+<div class="container">
+  
 
         <div class="row">
             <div class="col-md-3"></div>
@@ -44,7 +44,6 @@
                 </div>
             </div>
         </div>
-    </div>
 
 </div>
 
