--- a/school/templates/auth/authbase.html
+++ b/school/templates/auth/authbase.html
@@ -183,7 +183,7 @@
         </div>
       </div>
 
-      {% include "footer.html" %}
+      <!-- {% include "footer.html" %} -->
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
