--- a/school/templates/base.html
+++ b/school/templates/base.html
@@ -134,13 +134,15 @@
         </aside>
          {% endblock %}
           </div>
+          <div class="container">
           <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
-
+        </div>
         </div>
       </div>
 
+      <!-- {% block footer %}
       {% include "footer.html" %}
-
+      {% endblock %} -->
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
