--- a/school/templates/hod/base.html
+++ b/school/templates/hod/base.html
@@ -200,7 +200,7 @@
         </div>
       </div>
 
-      {% include "footer.html" %}
+      <!-- {% include "footer.html" %} -->
 
 
     {% block scripts %}
