--- a/school/templates/student/studentbase.html
+++ b/school/templates/student/studentbase.html
@@ -176,7 +176,7 @@
         </div>
       </div>
 
-      {% include "footer.html" %}
+      <!-- {% include "footer.html" %} -->
 
 
     {% block scripts %}
