--- a/school/templates/base.html
+++ b/school/templates/base.html
@@ -1,6 +1,4 @@
-{% load bootstrap3 %}
 {% load bootstrap4 %}
-{% load bootstrap5 %}
 {% load static%}
 <!DOCTYPE html>
 <html>
@@ -75,7 +73,7 @@
         <div class="row">
           <div class="col-sm-2">
           {% block sidebar %}
-          <aside class="main-sidebar sidebar-dark-primary elevation-4 bg-dark" style="width: 250px; height: 900px;">
+          <aside class="main-sidebar sidebar-dark-primary elevation-4 bg-dark" style="width: 250px; height: 100%;">
             <!-- Brand Logo -->
             <a href="{% url 'hodhome' %}" class="brand-link">
                 <span class="brand-text font-weight-light">Admin Panel</span>
