--- a/school/templates/teacher/perfomance.html
+++ b/school/templates/teacher/perfomance.html
@@ -48,7 +48,7 @@
                   {% for student in allstudents %}
                   <td> {{student.position}}  </td>
                   <td> {{student.student.user}} </td>
-                    <td><span> {{mark.exam1}} </span> </td>
+                    <td><span>{{student.all}} </span> </td>
                     <td> <span>{{mark.exam2 }}</span> </td>
                     <td> <span>{{mark.endterm}} </span> </td>
                     <td> <span> {{mark.mean_marks}}</span> </td>
