--- a/school/templates/hod/addclasses.html
+++ b/school/templates/hod/addclasses.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 {% load bootstrap5 %}
-
+<div class="container-fluid">
 <form  action="" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
@@ -14,6 +14,6 @@
     <input type="hidden" name="next" value="{{next}}">
 
   </form>
-
+</div>
   <!-- {{all_subjects}} -->
   {%endblock%}
