--- a/school/templates/hod/allclasses.html
+++ b/school/templates/hod/allclasses.html
@@ -4,7 +4,7 @@
 {% load bootstrap5 %}
 {% load mymarks %}
 
-<div class="container">
+<div class="container-fluid">
 
     <div class="row">
         {% for class in all_classes%}
