--- a/school/templates/auth/studentregister.html
+++ b/school/templates/auth/studentregister.html
@@ -8,7 +8,7 @@
 </form> -->
   {%block content%}
   <center>
-    
+    <div class="container-fluid">
   <h2>Student  Form</h2>
 
   <form align="left" method="post" id="studentForm" data-subjects-url="{% url 'ajax_load_subjects' %}">
@@ -19,7 +19,7 @@
     <input type="submit" value="Register" class="btn btn-block btn-primary">
     
   </form>
-
+</div>
 </center>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script>
