--- a/school/templates/hod/fees.html
+++ b/school/templates/hod/fees.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 {% load bootstrap5 %}
-
+<div class="container">
 <form  action="" method="post" style="margin-left: 35px;">
     {% csrf_token %}
     {% bootstrap_form form %}
@@ -14,7 +14,7 @@
     <input type="hidden" name="next" value="{{next}}">
 
   </form>
-
+</div>
   {%endblock%}
 
   
