--- a/school/templates/hod/studentreport.html
+++ b/school/templates/hod/studentreport.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load mymarks %}
+<div class="container-fluid">
 <div id="print-content">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -127,3 +128,4 @@
     </form> 
   
 
+</div>
