--- a/school/templates/teacher/marks.html
+++ b/school/templates/teacher/marks.html
@@ -1,10 +1,12 @@
 {%extends 'teacher/teacherbase.html'%}
 
 {% block content %}
+<div class="container">
 <form action="#" method="post">
     {% csrf_token %}
     
 {{form}}
 <input type="submit" value="Add">
 </form>
+</div>
 {%endblock%}
